--- a/service.yaml
+++ b/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: argocd-web-app-service
+  namespace: argocd
 spec:
   selector:
     app: argocd-web-app
