--- a/application.yaml
+++ b/application.yaml
@@ -12,10 +12,11 @@ spec:
     path: dev
   destination: 
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: default
 
   syncPolicy:
     syncOptions:
+    - ApplyOutOfSyncOnly=true
     - CreateNamespace=true
 
     automated:
