--- a/application.yaml
+++ b/application.yaml
@@ -12,7 +12,7 @@ spec:
     path: dev
   destination: 
     server: https://kubernetes.default.svc
-    namespace: argocd
+    namespace: default
 
   syncPolicy:
     syncOptions:
