--- a/.github/workflows/1-actions-ci-cd-aks.yml
+++ b/.github/workflows/1-actions-ci-cd-aks.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DOCKER_REPOSITORY: dragos93 # name of Docker Hub ID
-      IMAGE_NAME: webapp
+      IMAGE_NAME: argocd-web-app
       IMAGE_TAG: ${{ github.run_number }} # $GITHUB_RUN_NUMBER
     
     steps:
@@ -56,50 +56,7 @@ jobs:
         IMAGE_NAME: ${{ env.IMAGE_NAME }}
         IMAGE_TAG: ${{ env.IMAGE_TAG }}
 
-    # Set the target Kubernetes cluster....
-    
-    - name: Set up kubeconfig for Kubernetes cluster
-      run: |
-        mkdir -p ~/.kube
-        echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
-
-    - name: Debug Connectivity
-      run: |
-        echo "Testing connection to Kubernetes API..."
-        kubectl cluster-info
-        curl -k http://192.168.65.3:6443
-        ping 192.168.65.3
-
-    - name: Create Namespace for Argo CD
-      run: |
-        kubectl create ns argocd || echo "Namespace 'argocd' already exists."
-
-    - name: Debug Cluster Connectivity
-      run: |
-        kubectl cluster-info
-        kubectl get nodes
-    - name: Create Namespace for Argo CD
-      run: |
-        kubectl create ns argocd
-  
-    - name: Install Argo CD
-      run: |
-        kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
-    
-    
-    - name: Fetch Argo CD Initial Admin Secret
-      run: |
-        kubectl get secret -n argocd argocd-initial-admin-secret -o yaml
-    
-    - name: Echo Argo CD Admin Secret
-      run: |
-        kubectl get secret -n argocd argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d
-  
-    - name: Deploy Kubernetes Manifests
-      run: |
-        kubectl apply -f kubernetes/deployment.yaml -n argocd
-        kubectl apply -f kubernetes/service.yaml -n argocd
-        kubectl apply -f kubernetes/applycation.yaml -n argocd        
+    # Run Kube-Bench to check cluster config....
     
     - name: Run Kube-Bench to check cluster config
       continue-on-error: true
