--- a/.github/workflows/1-actions-ci-cd-aks.yml
+++ b/.github/workflows/1-actions-ci-cd-aks.yml
@@ -6,7 +6,7 @@ on:
     paths: .github/workflows/1-actions-ci-cd-aks.yml
   pull_request:
     branches:  none # [ main ]
-  # Allows you to run this workflow manually from the Actions tab
+  # Allows you to run this workflow manually from the Actions tab.
   workflow_dispatch:
 
 jobs:
@@ -55,4 +55,15 @@ jobs:
         DOCKER_REPOSITORY: ${{ env.DOCKER_REPOSITORY }}
         IMAGE_NAME: ${{ env.IMAGE_NAME }}
         IMAGE_TAG: ${{ env.IMAGE_TAG }}
-
+      
+        # Set the target Kubernetes cluster.....
+    
+    - name: Set up kubeconfig for Kubernetes cluster
+      run: |
+        mkdir -p ~/.kube
+        echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
+      
+    - name: Debug Connectivity
+      run: |
+        echo "Testing connection to Kubernetes API..."
+        kubectl cluster-info
