--- a/.github/workflows/1-actions-ci-cd-aks.yml
+++ b/.github/workflows/1-actions-ci-cd-aks.yml
@@ -55,7 +55,7 @@ jobs:
         DOCKER_REPOSITORY: ${{ env.DOCKER_REPOSITORY }}
         IMAGE_NAME: ${{ env.IMAGE_NAME }}
         IMAGE_TAG: ${{ env.IMAGE_TAG }}
-    # Set the target Kubernetes cluster....
+    # Set the target Kubernetes cluster.....
     
     - name: Set up kubeconfig for Kubernetes cluster
       run: |
