--- a/.github/workflows/1-actions-ci-cd-aks.yml
+++ b/.github/workflows/1-actions-ci-cd-aks.yml
@@ -56,3 +56,11 @@ jobs:
         IMAGE_NAME: ${{ env.IMAGE_NAME }}
         IMAGE_TAG: ${{ env.IMAGE_TAG }}
 
+    - name: Apply Kubernetes Deployment
+      run: |
+        kubectl apply -f ../dev/deployment.yaml
+  
+    - name: ArgoCD Application Sync
+      run: |
+        argocd app sync argocd-web-app
+  
