--- a/.github/workflows/1-actions-ci-cd-aks.yml
+++ b/.github/workflows/1-actions-ci-cd-aks.yml
@@ -14,7 +14,7 @@ jobs:
   build-deploy-aks:
     runs-on: ubuntu-latest
     env:
-      DOCKER_REPOSITORY: dragos93 # name of Docker Hub ID
+      DOCKER_REPOSITORY: dragos93 # name of Docker Hub ID test
       IMAGE_NAME: argocd-web-app
       IMAGE_TAG: ${{ github.run_number }} # $GITHUB_RUN_NUMBER
     
